syntax = "proto3";

option java_package = "com.example.geminitest.data.auth";
option java_multiple_files = true;

message TokenPrefs {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}